Add : parcel bundler for build the assets

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "dev": "parcel",
-    "build": "parcel build",
+    "build": "npx -p parcel-bundler parcel build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Wijayaac",
