--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "take home test",
   "source": [
     "src/index.html",
-    "src/about.html"
+    "src/contact.html",
+    "src/about.html",
+    "src/term.html"
   ],
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
