--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
-    "sass-mq": "^5.0.1"
+    "sass-mq": "^5.0.1",
+    "swiper": "^8.4.6"
   }
 }
