--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "author": "Wijayaac",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/packager-raw-url": "^2.8.3",
+    "@parcel/packager-xml": "^2.8.3",
     "@parcel/transformer-sass": "^2.8.3",
+    "@parcel/transformer-webmanifest": "^2.8.3",
+    "@parcel/transformer-xml": "^2.8.3",
     "buffer": "^5.7.1",
     "parcel": "^2.8.3"
   },
