--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
+    "sal.js": "^0.8.5",
     "sass-mq": "^5.0.1",
     "swiper": "^8.4.6"
   }
